fix(menu): css scrollbar ajoiut css pour edge et chrome #18

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -99,7 +99,23 @@
   -webkit-mask-image: url("../assets/icon/trace.svg");
   mask-image: url("../assets/icon/trace.svg");
 }
+/* Chrome / Edge / Safari */
+::-webkit-scrollbar {
+  width: 12px;
+}
 
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
 @media screen and (min-width: 0\0) and (min-resolution: 72dpi) {
   .fr-icon-polygon-icon::before,
   .fr-icon-polygon-icon::after {
